--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "go-first-application",
+  "version": "1.0.0",
+  "description": "",
+  "main": "src/index.tsx",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "serve-dev": "npx webpack-dev-server --config webpack.config.js --inline --hot --port=8081 --content-base dist --open-page ."
+  },
+  "author": "",
+  "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
