--- a/frontend/package.json
+++ b/frontend/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "src/index.tsx",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "serve-dev": "npx webpack-dev-server --config webpack.config.js --inline --hot --port=8081 --content-base dist --open-page ."
+    "start": "webpack-cli serve --open --mode development",
+    "prebuild": "rimraf dist",
+    "build": "webpack --progress --mode production"
   },
   "author": "",
   "license": "ISC",
@@ -45,5 +46,9 @@
     "webpack": "^5.40.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
+  },
+  "dependencies": {
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
