--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "babel-eslint": "^10.1.0",
     "babel-loader": "^8.2.2",
     "babel-polyfill": "^6.26.0",
+    "core-js": "^3.15.2",
     "css-loader": "^5.2.6",
     "dotenv-webpack": "^7.0.3",
     "eslint": "^7.29.0",
@@ -48,6 +49,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "axios": "^0.21.1",
     "file-loader": "^6.2.0",
     "firebase": "^8.7.0",
     "react": "^17.0.2",
