--- a/frontend/package.json
+++ b/frontend/package.json
@@ -49,6 +49,7 @@
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@apollo/client": "^3.3.21",
     "axios": "^0.21.1",
     "file-loader": "^6.2.0",
     "firebase": "^8.7.0",
