--- a/frontend/package.json
+++ b/frontend/package.json
@@ -50,6 +50,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.3.21",
+    "@types/styled-components": "^5.1.11",
     "axios": "^0.21.1",
     "file-loader": "^6.2.0",
     "firebase": "^8.7.0",
@@ -60,6 +61,7 @@
     "react-router-dom": "^5.2.0",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^2.0.3",
+    "styled-components": "^5.3.0",
     "url-loader": "^4.1.1"
   }
 }
